--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -21,8 +21,8 @@ jobs:
           coverage: none
 
       - name: Install Dependencies
-        # We update the working-directory here and in every step below
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+        # We added --ignore-platform-reqs at the end
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --ignore-platform-reqs
         working-directory: ./apps/backend
 
       - name: Prepare Laravel App
