feat: update docker file for aws

--- a/apps/backend/dockerfile__backup_sqlite
+++ b/apps/backend/dockerfile__backup_sqlite
@@ -2,9 +2,9 @@
 FROM php:8.4-fpm-alpine
 LABEL authors="Muhammad Saqib Bilal"
 
-# 2. SYSTEM PACKAGES & PHP EXTENSIONS (Updated for Postgres)
+# 2. SYSTEM PACKAGES & PHP EXTENSIONS
 RUN apk add --no-cache \
-    postgresql-dev \
+    sqlite-dev \
     libzip-dev \
     libpng-dev \
     libjpeg-turbo-dev \
@@ -16,7 +16,7 @@ RUN apk add --no-cache \
     unzip \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install \
-    pdo pdo_pgsql pdo_mysql bcmath zip gd intl mbstring
+    pdo pdo_sqlite pdo_mysql bcmath zip gd intl mbstring
 
 # 3. COMPOSER
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
@@ -35,8 +35,10 @@ RUN composer install \
 RUN chown -R www-data:www-data /var/www \
     && chmod -R 775 /var/www/storage /var/www/bootstrap/cache
 
-# 7. CLEANUP (Removed SQLite setup, added generic DB check)
-# We no longer need to touch a database.sqlite file here.
+# 7. SQLITE DATABASE
+RUN mkdir -p /var/www/database \
+    && touch /var/www/database/database.sqlite \
+    && chmod -R 775 /var/www/database
 
 # 8. COPY START SCRIPT
 COPY start.sh /start.sh
