--- a/amplify.yml
+++ b/amplify.yml
@@ -11,7 +11,7 @@ applications:
           commands:
             - pnpm --filter frontend build
       artifacts:
-        baseDirectory: .next
+        baseDirectory: .next/standalone
         files:
           - '**/*'
       cache:
