--- a/amplify.yml
+++ b/amplify.yml
@@ -10,6 +10,8 @@ applications:
         build:
           commands:
             - pnpm --filter frontend build
+            - cp -r .next/static .next/standalone/.next/
+            - cp -r public .next/standalone/public
       artifacts:
         baseDirectory: .next/standalone
         files:
