--- a/amplify.yml
+++ b/amplify.yml
@@ -10,6 +10,7 @@ applications:
         build:
           commands:
             - pnpm --filter frontend build
+            - mkdir -p .next/standalone/.next
             - cp -r .next/static .next/standalone/.next/
             - cp -r public .next/standalone/public
       artifacts:
