--- a/amplify.yml
+++ b/amplify.yml
@@ -1,23 +1,19 @@
 version: 1
-applications:
-  - appRoot: apps/frontend
-    frontend:
-      phases:
-        preBuild:
-          commands:
-            - corepack enable
-            - pnpm install --frozen-lockfile
-        build:
-          commands:
-            - pnpm --filter frontend build
-            - mkdir -p .next/standalone/.next
-            - cp -r .next/static .next/standalone/.next/
-            - cp -r public .next/standalone/public
-      artifacts:
-        baseDirectory: .next/standalone
-        files:
-          - '**/*'
-      cache:
-        paths:
-          - node_modules/**
-          - .pnpm-store/**
+frontend:
+  appRoot: apps/frontend
+  phases:
+    preBuild:
+      commands:
+        - corepack enable
+        - pnpm install --frozen-lockfile
+    build:
+      commands:
+        - pnpm build
+  artifacts:
+    baseDirectory: .next/standalone
+    files:
+      - '**/*'
+  cache:
+    paths:
+      - node_modules/**/*
+      - .next/cache/**/*
