changed amplify.yml for the 100th time

--- a/amplify.yml
+++ b/amplify.yml
@@ -10,7 +10,7 @@ frontend:
       commands:
         - pnpm build
   artifacts:
-    baseDirectory: .next/standalone
+    baseDirectory: .next
     files:
       - '**/*'
   cache:
