--- a/amplify.yml
+++ b/amplify.yml
@@ -1,19 +1,21 @@
 version: 1
-frontend:
-  appRoot: apps/frontend
-  phases:
-    preBuild:
-      commands:
-        - corepack enable
-        - pnpm install --frozen-lockfile
-    build:
-      commands:
-        - pnpm build
-  artifacts:
-    baseDirectory: .next
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - node_modules/**/*
-      - .next/cache/**/*
+
+applications:
+  - appRoot: apps/frontend
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - corepack enable
+            - pnpm install --frozen-lockfile
+        build:
+          commands:
+            - pnpm build
+      artifacts:
+        baseDirectory: .next
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - node_modules/**/*
+          - .next/cache/**/*
