--- a/amplify.yml
+++ b/amplify.yml
@@ -1,8 +1,8 @@
 version: 1
 
 applications:
-  - appRoot: apps/frontend
-    frontend:
+  - frontend:
+      appRoot: apps/frontend
       phases:
         preBuild:
           commands:
@@ -12,10 +12,10 @@ applications:
           commands:
             - pnpm build
       artifacts:
-        baseDirectory: .next
+        baseDirectory: apps/frontend/.next
         files:
           - '**/*'
       cache:
         paths:
           - node_modules/**/*
-          - .next/cache/**/*
+          - apps/frontend/.next/cache/**/*
