--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,24 @@
 services:
-  # --- BACKEND SERVICE ---
-  backend:
-    build:
-      context: ./apps/backend
-      dockerfile: Dockerfile
-    container_name: taskflow-api
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./apps/backend:/var/www
-    networks:
-      - taskflow-network
-
-  # --- FRONTEND SERVICE ---
   frontend:
     build:
-      context: ./apps/frontend
-      dockerfile: Dockerfile
-    container_name: taskflow-ui
+      context: .
+      # Point to the renamed file in the root
+      dockerfile: frontend.Dockerfile
+      args:
+        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     ports:
       - "3000:3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://backend:8000
-    networks:
-      - taskflow-network
+      - NEXT_PUBLIC_API_URL=http://localhost:8000
+    extra_hosts:
+      - "localhost:host-gateway"
+    restart: always
 
-networks:
-  taskflow-network:
-    driver: bridge
+  # Backend (if you want to run it via Docker too)
+  backend:
+    build:
+      context: .
+      dockerfile: apps/backend/Dockerfile
+    ports:
+      - "8000:8000"
+    restart: always
