--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -23,7 +23,7 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # 4. APP CODE
 WORKDIR /var/www
-COPY apps/backend .
+COPY . .
 
 # 5. DEPENDENCIES (CRITICAL)
 RUN composer install \
@@ -40,7 +40,7 @@ RUN chown -R www-data:www-data /var/www \
 # We no longer need to touch a database.sqlite file here.
 
 # 8. COPY START SCRIPT
-COPY apps/backend/start.sh /start.sh
+COPY start.sh /start.sh
 RUN chmod +x /start.sh
 
 # 9. RUN AS NON-ROOT
